--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-
-<!-- head 안 어딘가에 추가 -->
-<script>
-  if (window.location.href.includes('ngrok')) {
-    const visited = sessionStorage.getItem('ngrok-visited');
-    if (!visited) {
-      sessionStorage.setItem('ngrok-visited', 'true');
-      if (!window.location.hash.includes('ngrok-skip-browser-warning')) {
-        window.location.href = window.location.href + '#ngrok-skip-browser-warning';
-      }
-    }
-  }
-</script>
-
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>가사도우미</title>
+</head>
+<body>
+  <h1>가사도우미 웹사이트에 오신 것을 환영합니다!</h1>
+  <p>이곳에서 가사 파일을 업로드하고 관리할 수 있습니다.</p>
+</body>
+</html>
