--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>가사도우미</title>
 </head>
 <body>
+  <script src="setting.js"></script>
+
   <h1>가사도우미 웹사이트에 오신 것을 환영합니다!</h1>
   <p>이곳에서 가사 파일을 업로드하고 관리할 수 있습니다.</p>
 </body>
